Links, jQuery bug squashing, styling

--- a/style/style.css
+++ b/style/style.css
@@ -146,7 +146,8 @@ nav ion-icon {
     transition: all .2s ease-in-out;
     text-shadow: -1vmin -1vmin rgba(150,150,200,.6), 1vmin 1vmin rgba(232,232,86,.6);
     /* stretch goal - have text-shadow animate breifly out and back in on hover, maybe use .hover() jquery
-} */
+*/
+}
 
 .content {
   background-color: rgba(255,255,255,.5);
@@ -167,34 +168,38 @@ nav ion-icon {
 
 #link-list-title {
   font-size:2em;
-  background-color: rgba(255,255,255,.5);
+  background-color: rgba(232,232,86,.8);
+  box-shadow:3px 3px rgba(150,150,200,1);
   padding:1rem;
+  margin:2%;
   text-align:center;
   color:white;
-  margin:2%;
-  text-shadow:1px 1px black, -1px 1px black, 1px -1px black, -1px -1px black;
+  text-shadow:3px 3px black, -1px 1px black, 1px -1px black, -1px -1px black;
 }
 
 #link-container {
+  text-align:center;
+  background-color: rgba(255,255,255,.5);
   list-style:none;
   margin:0 2%;
+  box-shadow:3px 3px rgba(150,150,200,1);
 }
 
 .list-link {
+  display:flex;
+  max-width:350px;
+  flex-flow: row nowrap;
+  justify-content:space-between;
+  align-items:center;
   text-align:left;
   font-size:1.5em;
   padding:1em 1em 1em 2em;
+  margin:0 auto;
 }
 
-.link-text {
-  color:black;
-  text-decoration:none;
-  transition: all .2s linear;
-}
-
-.link-text:hover {
-  color:white;
-  text-shadow:2px 2px rgba(232,232,86,.8);
+.link-icon {
+  font-size:32px;
+  padding:1rem;
 }
 
 .small {
